Pull up following revision(s) (requested by dholland in ticket #1410): 	sbin/disklabel/interact.c: revision 1.34 Change getnum() to use intmax_t instead of int, so it doesn't overflow between 2^31 and 2^32. Adjust call sites accordingly. PR 43354.